[package]
name = "http_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
volo-gen = { path = "../mini-redis/volo-gen" }
mini_redis ={ path = "../mini-redis" }
lazy_static = "1.4.0"
tokio = { version = "1.32.0", features = ["macros"] }
volo-thrift = "0.7.2"
faststr = "0.2.11"
reqwest = "0.11.20"
